--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -23,3 +23,4 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 
 // Include custom styles
 @import "scss/app/globals";
+@import "scss/app/google-maps";
