--- a/www/app/components/home/home.view.html
+++ b/www/app/components/home/home.view.html
@@ -1,11 +1,20 @@
 <ion-view view-title="VLiller" class="home-view">
     <ion-nav-bar align-title="center" class="bar-assertive">
         <ion-nav-back-button class="no-text"></ion-nav-back-button>
+
+        <ion-nav-buttons side="right">
+            <!-- <button ng-click="HomeCtrl.refresh()" class="button button-clear">
+                <i class="icon ion-android-refresh"></i>
+            </button> -->
+            <button ng-click="HomeCtrl.activeGPS()" class="button button-clear">
+                <i class="icon ion-android-locate"></i>
+            </button>
+        </ion-nav-buttons>
     </ion-nav-bar>
 
     <ion-content class="home-content">
         <div class="content-loader" ng-if="HomeCtrl.isLoading" ng-cloak>
-            <ion-spinner icon="android" class="spinner-positive"></ion-spinner>
+            <ion-spinner icon="android" class="spinner-assertive"></ion-spinner>
         </div>
 
         <ion-refresher on-refresh="HomeCtrl.refresh()"></ion-refresher>
@@ -21,6 +30,7 @@
                 control="HomeCtrl.map.control"
             >
                 <ui-gmap-marker
+                    ng-if="HomeCtrl.isGPSActive"
                     idkey="HomeCtrl.userMarker.id"
                     coords="HomeCtrl.userMarker.coords"
                     options="HomeCtrl.userMarker.options"
@@ -30,6 +40,7 @@
                     models="HomeCtrl.stations"
                     coords="'self'"
                     click="HomeCtrl.markerClick"
+                    icon="'icon'"
                 ></ui-gmap-markers>
             </ui-gmap-google-map>
         </div>
