Implements navigation to station

--- a/www/app/components/station/station.view.html
+++ b/www/app/components/station/station.view.html
@@ -9,7 +9,7 @@
         </div>
 
         <div class="list card">
-            <a href="#" class="item item-icon-left positive">
+            <a ng-click="StationCtrl.navigate()" href="#" class="item item-icon-left positive">
                 <i class="icon ion-navigate"></i>
                 {{ StationCtrl.station.adress }}
             </a>
