--- a/www/app/components/station/station.view.html
+++ b/www/app/components/station/station.view.html
@@ -30,6 +30,8 @@
             </a>
         </div>
 
+        <p class="text-right padding-right">Il y a {{ StationCtrl.station.lastupd }}</p>
+
         <!-- {{ StationCtrl.station | json }} -->
     </ion-content>
 </ion-view>
