Refactor main view to remove details view

--- a/www/app/components/home/home.view.html
+++ b/www/app/components/home/home.view.html
@@ -44,5 +44,55 @@
                 ></ui-gmap-markers>
             </ui-gmap-google-map>
         </div>
+
+        <!-- station details -->
+        <div class="card map-card" ng-if="HomeCtrl.activeStation">
+            <div class="content-loader" ng-if="!HomeCtrl.activeStation.$loaded" ng-cloak>
+                <ion-spinner icon="android" class="spinner-assertive"></ion-spinner>
+            </div>
+
+            <div ng-if="HomeCtrl.activeStation.$loaded">
+                <!-- station name (+ CB) -->
+                <div class="item item-divider item-icon-right">
+                    {{ HomeCtrl.activeStation.name }} <small class="lastupd">Il y a {{ HomeCtrl.activeStation.lastupd }}</small>
+                    <i ng-if="HomeCtrl.activeStation.paiement === 'AVEC_TPE'" class="icon ion-card"></i>
+                </div>
+
+                <!-- station bike/attachs -->
+                <div class="item item-content">
+                    <div class="row no-padding">
+                        <!-- bikes -->
+                        <div class="col text-center">
+                        <div class="list">
+                        <div class="item item-icon-left" ng-class="{
+                            'assertive-bg light': HomeCtrl.activeStation.bikes < 5
+                        }">
+                            <i class="icon ion-android-bicycle"></i>
+                            <span class="item-number-value">{{ HomeCtrl.activeStation.bikes }}</span>
+                        </div>
+                        </div>
+                        </div>
+
+                        <!-- attachs -->
+                        <div class="col text-center" >
+                        <div class="list">
+                        <div class="item item-icon-left" ng-class="{
+                            'assertive-bg light': HomeCtrl.activeStation.attachs < 5
+                        }">
+                            <i class="icon ion-flag"></i>
+                            <span class="item-number-value">{{ HomeCtrl.activeStation.attachs }}</span>
+
+                        </div>
+                        </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- navigate to -->
+                <div ng-click="HomeCtrl.navigate()" class="item item-icon-left positive">
+                   <i class="icon ion-navigate"></i> {{ HomeCtrl.activeStation.adress }}
+                </div>
+            </div>
+        </div>
     </ion-content>
 </ion-view>
