--- a/www/app/components/home/home.view.html
+++ b/www/app/components/home/home.view.html
@@ -47,12 +47,12 @@
 
         <!-- station details -->
         <div class="card map-card" ng-if="HomeCtrl.activeStation">
-            <div class="content-loader" ng-if="!HomeCtrl.activeStation.$loaded" ng-cloak>
+            <div class="content-loader padding" ng-if="!HomeCtrl.activeStation.$loaded" ng-cloak>
                 <ion-spinner icon="android" class="spinner-assertive"></ion-spinner>
             </div>
 
             <div ng-if="HomeCtrl.activeStation.$loaded">
-                <!-- station name (+ CB) -->
+                <!-- station name, uptime and CB -->
                 <div class="item item-divider item-icon-right">
                     {{ HomeCtrl.activeStation.name }} <small class="lastupd">Il y a {{ HomeCtrl.activeStation.lastupd }}</small>
                     <i ng-if="HomeCtrl.activeStation.paiement === 'AVEC_TPE'" class="icon ion-card"></i>
