--- a/www/app/components/home/home.view.html
+++ b/www/app/components/home/home.view.html
@@ -1,5 +1,5 @@
 <ion-view view-title="VLiller" class="home-view">
-    <ion-nav-bar align-title="center" class="bar-assertive">
+    <ion-nav-bar class="bar-assertive">
         <ion-nav-back-button class="no-text"></ion-nav-back-button>
 
         <ion-nav-buttons side="right">
