Removes offline code

--- a/www/app/components/home/home.view.html
+++ b/www/app/components/home/home.view.html
@@ -18,9 +18,7 @@
         </div>
 
         <!-- map -->
-        <div class="map-container" data-tap-disabled="true" ng-hide="
-        HomeCtrl.isOffline ||
-        HomeCtrl.isLoading">
+        <div class="map-container" data-tap-disabled="true" ng-hide="HomeCtrl.isLoading">
             <ui-gmap-google-map
                 center="HomeCtrl.map.center"
                 zoom="HomeCtrl.map.zoom"
