--- a/www/app/components/home/home.view.html
+++ b/www/app/components/home/home.view.html
@@ -3,7 +3,7 @@
         <ion-nav-back-button class="no-text"></ion-nav-back-button>
 
         <ion-nav-buttons side="right">
-            <button ng-click="HomeCtrl.activeGPS()" class="button button-clear">
+            <button ng-click="HomeCtrl.updatePosition()" class="button button-clear">
                 <i ng-if="!HomeCtrl.isGPSLoading" class="icon ion-android-locate"></i>
                 <ion-spinner ng-if="HomeCtrl.isGPSLoading" icon="android" class="spinner-light"></ion-spinner>
             </button>
