Replace angular google maps by google-maps component and implement setCenter WIP

--- a/www/app/components/home/home.view.html
+++ b/www/app/components/home/home.view.html
@@ -17,7 +17,7 @@
 
         <!-- map -->
         <div class="map-container" data-tap-disabled="true" ng-hide="HomeCtrl.isLoading">
-            <ui-gmap-google-map
+            <!-- <ui-gmap-google-map
                 center="HomeCtrl.map.center"
                 zoom="HomeCtrl.map.zoom"
                 options="HomeCtrl.map.options"
@@ -36,7 +36,8 @@
                     click="HomeCtrl.markerClick"
                     icon="'icon'"
                 ></ui-gmap-markers>
-            </ui-gmap-google-map>
+            </ui-gmap-google-map> -->
+            <google-maps on-map-ready="HomeCtrl.onMapReady(map)"></google-maps>
         </div>
 
         <!-- station details -->
