--- a/www/app/components/home/home.view.html
+++ b/www/app/components/home/home.view.html
@@ -1,4 +1,4 @@
-<ion-view view-title="VLiller" class="home-view">
+<ion-view class="home-view">
     <ion-nav-bar class="bar-assertive">
         <ion-nav-back-button class="no-text"></ion-nav-back-button>
 
@@ -9,6 +9,10 @@
             </button>
         </ion-nav-buttons>
     </ion-nav-bar>
+
+    <ion-nav-title>
+        <img class="img-responsive" src="assets/img/vliller-header-logo.png">
+    </ion-nav-title>
 
     <ion-content class="home-content">
         <div class="content-loader" ng-if="HomeCtrl.isLoading" ng-cloak>
