--- a/www/app/components/home/home.view.html
+++ b/www/app/components/home/home.view.html
@@ -22,6 +22,8 @@
         <!-- map -->
         <div class="map-container" data-tap-disabled="true" ng-hide="HomeCtrl.isLoading">
             <div id="map-canvas" class="map-canvas">
+            <div class="card-container">
+
                 <!-- station details -->
                 <div class="card map-card" ng-if="HomeCtrl.activeStation">
                     <div class="content-loader padding" ng-if="!HomeCtrl.activeStation.$loaded" ng-cloak>
@@ -29,10 +31,18 @@
                     </div>
 
                     <div ng-if="HomeCtrl.activeStation.$loaded">
+
                         <!-- station name, uptime and CB -->
-                        <div class="item item-divider item-icon-right">
-                            {{ HomeCtrl.activeStation.name }} <small class="lastupd">Il y a {{ HomeCtrl.activeStation.lastupd }}</small>
-                            <i ng-if="HomeCtrl.activeStation.payment === 'AVEC_TPE'" class="icon ion-card"></i>
+                        <div class="item item-header">
+                            <div class="station-name">{{ HomeCtrl.activeStation.name }}</div>
+
+                            <div class="station-lastupd">Il y a {{ HomeCtrl.activeStation.lastupd }}</div>
+
+                            <!-- CB -->
+                            <div class="station-cb">
+                                <img ng-if="HomeCtrl.activeStation.payment === 'AVEC_TPE'" class="img-responsive" src="assets/img/vliller-cb.png">
+                                <img ng-if="HomeCtrl.activeStation.payment !== 'AVEC_TPE'" class="img-responsive" src="assets/img/vliller-no-cb.png">
+                            </div>
                         </div>
 
                         <!-- station bike/attachs -->
@@ -76,13 +86,17 @@
                                 </div>
                             </div>
                         </div>
-
-                        <!-- navigate to -->
-                        <div ng-click="HomeCtrl.navigate()" class="item item-icon-left positive">
-                           <i class="icon ion-navigate"></i> {{ HomeCtrl.activeStation.address }}
-                        </div>
                     </div>
+
+
                 </div>
+
+                <!-- navigate to -->
+                <div ng-click="HomeCtrl.navigate()" class="floating-button positive-bg">
+                   <img class="img-responsive" src="assets/img/md_directions.svg">
+                </div>
+
+            </div>
             </div>
         </div>
     </ion-content>
