--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -23,6 +23,7 @@ $bar-height: 56px !default;
 $assertive: #e52b38 !default;
 $positive: #1e97f7 !default;
 $energized: #d9a601 !default;
+$calm: #33d699 !default;
 $dark: rgba(0, 0, 0, 0.87) !default;
 
 // The path for our ionicons font files, relative to the built CSS in www/css
