--- a/www/app/components/home/home.view.html
+++ b/www/app/components/home/home.view.html
@@ -55,7 +55,9 @@
 
                                     <div><img class="img-responsive" ng-src="{{ HomeCtrl.computeBikesIcon(HomeCtrl.activeStation.bikes) }}"></div>
                                 </div>
-                                <p class="text-small">vélos disponibles</p>
+
+                                <p ng-if="HomeCtrl.activeStation.bikes > 1" class="text-small">vélos disponibles</p>
+                                <p ng-if="HomeCtrl.activeStation.bikes <= 1" class="text-small">vélo disponible</p>
                             </div>
 
                             <!-- docks -->
@@ -65,7 +67,9 @@
 
                                     <div><img class="img-responsive" ng-src="{{ HomeCtrl.computeDocksIcon(HomeCtrl.activeStation.docks) }}"></div>
                                 </div>
-                                <p class="text-small">places libres</p>
+
+                                <p ng-if="HomeCtrl.activeStation.docks > 1" class="text-small">places libres</p>
+                                <p ng-if="HomeCtrl.activeStation.docks <= 1" class="text-small">place libre</p>
                             </div>
                         </div>
 
